--- a/style.css
+++ b/style.css
@@ -49,6 +49,17 @@ header {
     height: auto;
 }
 
+.titulo img {
+    max-width: 100%; /* Ensure the image is responsive */
+    height: auto; /* Maintain the aspect ratio */
+    object-fit: contain; /* Keep the image within its container */
+}
+
+.titulo {
+    max-width: 250px;
+    height: auto;
+}
+
 /* Section styles */
 section {
     display: flex;
